--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.0.0
   flutter_onboarding_slider: ^1.0.11
   font_awesome_flutter: ^10.5.0
   go_router: ^10.1.2
+  image_picker: ^1.0.4
   shared_preferences: ^2.2.2
+  agora_rtc_engine: ^6.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
