--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   go_router: ^10.1.2
   image_picker: ^1.0.4
   shared_preferences: ^2.2.2
-  agora_rtc_engine: ^6.2.2
+  # agora_rtc_engine: ^6.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
