--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cupertino_icons: ^1.0.2
+  dio: ^5.8.0+1
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
@@ -37,7 +37,6 @@ dependencies:
   go_router: ^10.1.2
   image_picker: ^1.0.4
   shared_preferences: ^2.2.2
-  # agora_rtc_engine: ^6.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
